--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <h2>ATAXX - 2 Player Game</h2>
+                            <h4>Ataxx (Console Project)</h4>
+                            <p>A 2 player console game using C++.</p>
                             <img src="images/project/Ataxx_Logo.png" class="img-fluid" alt="project image">
+                            <p>source code</p><a href="https://github.com/Amna-A" title="GitHub"><i class="fa fa-github"></i></a>
                           </div>
                         </div>
 
