--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ https://www.tooplate.com/view/2115-marvel
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
                             <img src="images/project/Ataxx_Logo.png" class="img-fluid" alt="project image">
-                            <p>source code<a href="https://github.com/Amna-A" title="GitHub"><i class="fa fa-github"></i></a></p>
+                            <!-- <button class="btn"><i class="fa fa-home"></i> Source Code</button> -->
+                            <a href="https://github.com/Amna-A/Ataxx-with-AlphaBeta" title="GitHub"><i class="fa fa-github">Source Code</i></a>
                           </div>
                         </div>
 
