--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2115-marvel
                             <p>A 2 player console game using C++.</p>
                             <img src="images/project/Ataxx_Logo.png" class="img-fluid" alt="project image">
                             <!-- <button class="btn"><i class="fa fa-home"></i> Source Code</button> -->
-                            <a href="https://github.com/Amna-A/Ataxx-with-AlphaBeta" title="GitHub"><i class="fa fa-github">Source Code</i></a>
+                            <button onclick="location.href='https://github.com/Amna-A/Ataxx-with-AlphaBeta'" type="button">Source Code</button>
                           </div>
                         </div>
 
