--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2115-marvel
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
                             <img src="images/project/Ataxx_Logo.png" class="img-fluid" alt="project image">
-                            <button class="btn btn-success" onclick=" window.open('http://github.com/Amna-A/Ataxx-with-AlphaBeta','_blank')"> Source Code</button>
+                            <a class="btn btn-success" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
                         </div>
 
