--- a/index.html
+++ b/index.html
@@ -115,38 +115,25 @@ https://www.tooplate.com/view/2115-marvel
                       </div>
 
                       <div class="owl-carousel owl-theme">
+                        
+                        <div class="item">
+                          <div class="project-info">
+                            <h4>Safari Rush Hour</h4>
+                            <p>A 7 x 7 grid game using C++.</p>
+                            <img src="images/project/safari.jpg" class="img-fluid" alt="project image">
+                            <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
+                          </div>
+                        </div> 
+
                         <div class="item">
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
                             <img src="images/project/Ataxx_Logo.png" class="img-fluid" alt="project image">
-                            <a class="btn btn-success" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
+                            <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
-                        </div>
+                        </div> 
 
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image02.png" class="img-fluid" alt="project image">
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image03.png" class="img-fluid" alt="project image">
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image04.png" class="img-fluid" alt="project image">
-                          </div>
-                        </div>
-
-                        <div class="item">
-                          <div class="project-info">
-                            <img src="images/project/project-image05.png" class="img-fluid" alt="project image">
-                          </div>
-                        </div>
                       </div>
 
                   </div>
