--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
-                            <img src="images/project/safari.jpg" class="img-fluid" alt="project image">
+                            <img src="images/project/safari.jpg" class="img-responsive" alt="project 1 image" width="460" height="345">
                             <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                           </div>
                         </div> 
