--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
-                            <div class="col-md-8 px-0">
-                              <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image">
-                              <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
-                            </div>
+                            <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image" width="460" height="345">
+                            <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                           </div>
                         </div> 
 
@@ -131,10 +129,8 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
-                            <div class="col-md-8 px-0">
-                              <img src="images/project/Ataxx.gif" class="img-fluid" alt="project 3 image">
-                              <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
-                            </div>
+                            <img src="images/project/Ataxx.gif" class="img-fluid" alt="project image">
+                            <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
                         </div> 
 
