--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://www.tooplate.com/view/2115-marvel
                         <br><br>
                       </div>
 
-                      <div class="owl-carousel owl-theme">
+                      <div class="owl-carousel owl-theme center">
                         
                         <div class="item">
                           <div class="project-info">
