--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@ https://www.tooplate.com/view/2115-marvel
                         <br><br>
                       </div>
 
-                      <div class="owl-carousel owl-theme center">
+                      <div class="owl-carousel owl-theme center" width="1504" height="1018">
                         
                         <div class="item">
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
-                            <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image" width="1504" height="1018">
+                            <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image" >
                             <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                           </div>
                         </div> 
@@ -129,7 +129,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
-                            <img src="images/project/Ataxx.gif" class="img-fluid" alt="project image" width="1504" height="1018">
+                            <img src="images/project/Ataxx.gif" class="img-fluid" alt="project image">
                             <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
                         </div> 
