--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@ https://www.tooplate.com/view/2115-marvel
                         <br><br>
                       </div>
 
-                      <div class="owl-carousel owl-theme center" width="1504" height="1018">
+                      <div class="owl-carousel owl-theme center style="width: 1504px; height:1018px;">
                         
                         <div class="item">
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
-                            <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image" >
+                            <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image">
                             <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                           </div>
                         </div> 
