--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ https://www.tooplate.com/view/2115-marvel
                         <br><br>
                       </div>
 
-                      <div class="owl-carousel owl-theme center" style="width: 100px; height:200px;">
+                      <div class="owl-carousel owl-theme center" style="width: 40%; height:400px;">
                         
                         <div class="item">
                           <div class="project-info">
