--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
-                            <img src="images/project/Ataxx.gif" class="img-fluid" alt="project image">
+                            <img src="images/project/resize-Ataxx.gif" class="img-fluid" alt="project image">
                             <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
                         </div> 
