--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
-                            <img src="images/project/safari.gif" class="img-fluid" alt="project 1 image">
+                            <img src="images/project/resize-safari.gif" class="img-fluid" alt="project 1 image">
+                            <br><br>
                             <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                           </div>
                         </div> 
@@ -130,6 +131,7 @@ https://www.tooplate.com/view/2115-marvel
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
                             <img src="images/project/resize-Ataxx.gif" class="img-fluid" alt="project image">
+                            <br><br>
                             <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
                         </div> 
