--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@ https://www.tooplate.com/view/2115-marvel
                           </div>
                         </div> 
 
+
+                        <div class="item">
+                          <div class="project-info">
+                            <h4>Search Trees (Public Crate)</h4>
+                            <p>Utilities for binary search tree, red-black tree, and AVL tree in Rust</p>
+                            <img src="images/project/resize-safari.gif" class="img-fluid" alt="project 2 image">
+
+                            <a class="btn btn-warning" href="https://github.com/ECE520-Project/trees" target="_blank">Source Code</a>
+                            <a class="btn btn-success" href="https://crates.io/crates/search_trees" target="_blank">Download Crate</a>
+                          </div>
+                        </div> 
+
                         <div class="item">
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
