--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Search Trees (Public Crate)</h4>
                             <p>Utilities for binary search tree, red-black tree, and AVL tree in Rust</p>
-                            <img src="images/project/resize-safari.gif" class="img-fluid" alt="project 2 image">
+                            <img src="images/project/bst.gif" class="img-fluid" alt="project 2 image">
 
                             <a class="btn btn-warning" href="https://github.com/ECE520-Project/trees" target="_blank">Source Code</a>
                             <a class="btn btn-success" href="https://crates.io/crates/search_trees" target="_blank">Download Crate</a>
