--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/unicons.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <!-- MAIN STYLE -->
     <link rel="stylesheet" href="css/tooplate-style.css">
@@ -71,7 +72,7 @@ https://www.tooplate.com/view/2115-marvel
         <div class="container">
             <div class="row">
                 
-                <div class="col-lg-7 col-md-14 col-12 d-flex align-items-center">
+                <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
@@ -79,7 +80,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
                                     <span class="animated-item">Software Engineer / Developer</span>
-                                    <span class="animated-item">Problem Solver</span>
+                                    <span class="animated-item space">Problem Solver</span>
                                 </div>
                         </h1>
 
