--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
                                     <span class="animated-item">Software Engineer / Developer</span>
-                                    <span class="animated-item space">Problem Solver</span>
+                                    <span class="animated-item">Problem </span>
                                 </div>
                         </h1>
 
