--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ https://www.tooplate.com/view/2115-marvel
     </nav>
 
     <!-- ABOUT -->
-    <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
+    <!-- <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about"> -->
+    <section class="about full-screen d-lg-flex justify-content-center" id="about">
         <div class="container">
             <div class="row">
                 
