--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ https://www.tooplate.com/view/2115-marvel
     </nav>
 
     <!-- ABOUT -->
-    <!-- <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about"> -->
-    <section class="about full-screen d-lg-flex justify-content-center" id="about">
+    <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
         <div class="container">
             <div class="row">
                 
@@ -81,7 +80,7 @@ https://www.tooplate.com/view/2115-marvel
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
                                     <span class="animated-item">Software Engineer / Developer</span>
-                                    <span class="animated-item">Problem momoo</span>
+                                    <span class="animated-item mr-2">Problem momoo</span>
                                 </div>
                         </h1>
 
