--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
-                                    <span class="animated-item">Problem momoo</span>
+                                    <span class="animated-item">Problem Solver</span>
                                     <span class="animated-item mr-2">Software Engineer / Developer</span>
                                 </div>
                         </h1>
