--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ https://www.tooplate.com/view/2115-marvel
         <div class="container">
             <div class="row">
                 
-                <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
+                <div class="col-lg-7 col-lg-2 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
@@ -80,7 +80,8 @@ https://www.tooplate.com/view/2115-marvel
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
                                     <span class="animated-item">Problem Solver</span>
-                                    <span class="animated-item">Software Engineer / Developer</span>
+                                    <span class="animated-item">Software Eng.</span>
+                                    <span class="animated-item">Software Dev.</span>
                                 </div>
                         </h1>
 
