--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Personal Portfolio">
-    <meta name="keywords" content="software developer, Python developer, Rust, C++ Developer, software engineer, python, c++, backend, fullstack, frontend">
+    <meta name="keywords" content="software developer, Python developer, Rust, C++ Developer, software engineer, python, c++, backend, fullstack, forntend">
     <meta name="author" content="">
 
     <title>Amina Eltahir Personal Portfolio</title>
@@ -73,7 +73,7 @@ https://www.tooplate.com/view/2115-marvel
         <div class="container">
             <div class="row">
                 
-                <div class="col-lg-7 col-lg-2 col-12 d-flex align-items-center">
+                <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
@@ -82,7 +82,6 @@ https://www.tooplate.com/view/2115-marvel
                                     <span class="animated-item">Amina Eltahir</span>
                                     <span class="animated-item">Problem Solver</span>
                                     <span class="animated-item">Software Eng.</span>
-                                    <span class="animated-item">Software Dev.</span>
                                 </div>
                         </h1>
 
