--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@ https://www.tooplate.com/view/2115-marvel
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
-                            <span class="mr-0.5">Hey folks, I'm</span>
+                            <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
-                                    <span class="animated-item">Problem Solver</span>
-                                    <span class="animated-item">Software Eng.</span>
+                                    <span class="animated-item">a Problem Solver</span>
+                                    <span class="animated-item">a Software Eng.</span>
                                 </div>
                         </h1>
 
