--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ https://www.tooplate.com/view/2115-marvel
                             <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
-                                    <span class="animated-item">a Problem Solver</span>
-                                    <span class="animated-item">a Software Eng.</span>
+                                    <span class="animated-item" style="position: -webkit-sticky">a Problem Solver</span>
+                                    <span class="animated-item" style="position: -webkit-sticky">a Software Eng.</span>
                                 </div>
                         </h1>
 
