--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@ https://www.tooplate.com/view/2115-marvel
         <div class="container">
             <div class="row">
                 
-                <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
+                <div class="col-lg-auto col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
                         <small class="small-text">Welcome to <span class="mobile-block">my portfolio website!</span></small>
                         <h1 class="animated animated-text">
                             <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
                                     <span class="animated-item">Amina Eltahir</span>
-                                    <span class="animated-item" style="position: -webkit-sticky">a Problem Solver</span>
-                                    <span class="animated-item" style="position: -webkit-sticky">a Software Eng.</span>
+                                    <span class="animated-item">a Problem Solver</span>
+                                    <span class="animated-item">a Software Eng.</span>
                                 </div>
                         </h1>
 
