--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ https://www.tooplate.com/view/2115-marvel
                             <p>A 7 x 7 grid game using C++.</p>
                             <img src="images/project/resize-safari.gif" class="img-fluid" alt="project 1 image">
 
-                            <a class="btn btn-warning" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
+                            <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                           </div>
                         </div> 
 
@@ -135,8 +135,8 @@ https://www.tooplate.com/view/2115-marvel
                             <p>Utilities for binary search tree, red-black tree, and AVL tree in Rust</p>
                             <img src="images/project/bst.gif" class="img-fluid" alt="project 2 image">
 
-                            <a class="btn btn-warning" href="https://github.com/ECE520-Project/trees" target="_blank">Source Code</a>
-                            <a class="btn btn-success" href="https://crates.io/crates/search_trees" target="_blank">Download Crate</a>
+                            <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/ECE520-Project/trees" target="_blank">Source Code</a>
+                            <a class="btn mr-lg-2 custom-btn" href="https://crates.io/crates/search_trees" target="_blank">Download Crate</a>
                           </div>
                         </div> 
 
@@ -146,7 +146,7 @@ https://www.tooplate.com/view/2115-marvel
                             <p>A 2 player console game using C++.</p>
                             <img src="images/project/resize-Ataxx.gif" class="img-fluid" alt="project image">
  
-                            <a class="btn btn-warning" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
+                            <a class="btn custom-btn custom-btn-bg custom-btn-link" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                           </div>
                         </div> 
 
