--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ https://www.tooplate.com/view/2115-marvel
                 </ul>
             </div>
         </div>
+        
     </nav>
 
     <!-- ABOUT -->
@@ -96,7 +97,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/undraw/avatar.gif" class="img-fluid" alt="svg image">
+                        <img src="images/undraw/website-developer.webp" class="img-fluid" alt="svg image">
                     </div>
                 </div>
 
@@ -105,7 +106,7 @@ https://www.tooplate.com/view/2115-marvel
     </section>
 
     <!-- PROJECTS -->
-    <section class="project py-5" id="project">
+    <section class="project py-5" id="project" >
         <div class="container">
                 
                 <div class="row">
@@ -123,18 +124,18 @@ https://www.tooplate.com/view/2115-marvel
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
                             <img src="images/project/resize-safari.gif" class="img-fluid" alt="project 1 image">
-
+                            <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
+                            <br><br>
                           </div>
                         </div> 
-
 
                         <div class="item">
                           <div class="project-info">
                             <h4>Search Trees (Public Crate)</h4>
                             <p>Utilities for binary search tree, red-black tree, and AVL tree in Rust</p>
-                            <img src="images/project/bst.gif" class="img-fluid" alt="project 2 image">
-
+                            <img src="images/project/search_trees.png" class="img-fluid" alt="project 2 image">
+                            <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/ECE520-Project/trees" target="_blank">Source Code</a>
                             <a class="btn mr-lg-2 custom-btn" href="https://crates.io/crates/search_trees" target="_blank">Download Crate</a>
                           </div>
@@ -144,9 +145,10 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
-                            <img src="images/project/resize-Ataxx.gif" class="img-fluid" alt="project image">
- 
+                            <img src="images/project/resize-Ataxx.gif" class="img-fluid" alt="project 3 image">
+                            <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
+                            <br><br>
                           </div>
                         </div> 
 
@@ -261,15 +263,15 @@ https://www.tooplate.com/view/2115-marvel
 
             <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                 <div class="contact-info-item">
-                  <h3 class="mb-3 text-white">Say hello</h3>
-                  <p class="footer-text mb-0">010 020 0960</p>
-                  <p><a href="mailto:hello@company.co">hello@company.co</a></p>
+                  <h3 class="mb-3 text-white">Stay In Touch!</h3>
+                  <p class="footer-text mb-0">+1 780 716 7982</p>
+                  <p><a href="mailto:amna.a.ibrahim22@gmail.com">amna.a.ibrahim22@gmail.com</a></p>
                 </div>
 
                 <ul class="social-links">
-                     <li><a href="#" class="uil uil-dribbble" data-toggle="tooltip" data-placement="left" title="Dribbble"></a></li>
-                     <li><a href="#" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
-                     <li><a href="#" class="uil uil-youtube" data-toggle="tooltip" data-placement="left" title="Youtube"></a></li>
+                  <li><a href="https://www.linkedin.com/in/amina-eltahir" class="uil uil-linkedin" target="_blank" data-toggle="tooltip" data-placement="left" title="LinkedIn"></a></li>
+                  <li><a href="#" class="uil uil-instagram" data-toggle="tooltip" data-placement="left" title="Instagram"></a></li>
+                  <li><a href="#" class="uil uil-youtube" data-toggle="tooltip" data-placement="left" title="Youtube"></a></li>
                 </ul>
             </div>
           </div>
