--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
-                            <img src="images/project/resize-safari.gif" class="img-fluid" alt="project 1 image">
+                            <img src="images/project/safari-test0.gif" class="img-fluid" alt="project 1 image">
                             <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
                             <br><br>
@@ -145,7 +145,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
-                            <img src="images/project/resize-Ataxx.gif" class="img-fluid" alt="project 3 image">
+                            <img src="images/project/Ataxx (1).gif" class="img-fluid" alt="project 3 image">
                             <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
                             <br><br>
