--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ https://www.tooplate.com/view/2115-marvel
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
+                        <a href="#home" class="nav-link"><span data-hover="Home">Home</span></a>
+                    </li>
+                    <li class="nav-item">
                         <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
                     </li>
                     <li class="nav-item">
@@ -68,12 +71,23 @@ https://www.tooplate.com/view/2115-marvel
         </div>
 
     </nav>
-    <br></br>
-    <br></br>
-    <div>
-      <h1 class="text-center" data-animate="fadeInUp"><mark>I'm Amina Elathir</mark></h1>
-      <h3 class="text-center small-text">Welcome to my portfolio website!</h3>
-    </div>
+
+    <!-- HOME -->
+    <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
+      <div class="container">
+        <div class="text-center">
+          <h3 class="text-center small-text">Welcome to my page!</h3>
+          <h1 class="text-center"><mark>I'm Amina Elathir</mark></h1>
+          <p class="text-center">A Software Engineer Based in Edmonton, Alberta</p>
+          <p>
+            <a href="#about" class="col-auto example-block">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
+          </p> 
+        </div>
+      </div>
+    </section>
+
+
+
     <!-- ABOUT -->
     <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
         <div class="container">
