--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@ https://www.tooplate.com/view/2115-marvel
 
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
-      <div class="container">
+      <div class="container p-3 mb-2 bg-warning text-dark">
         <div class="text-center">
           <h3 class="text-center small-text">Welcome to my page!</h3>
-          <h1 class="text-center"><mark>I'm Amina Elathir</mark></h1>
+          <h1 class="text-center">I'm Amina Elathir</h1>
           <p class="text-center">A Software Engineer Based in Edmonton, Alberta</p>
           <p>
             <a href="#about" class="col-auto example-block">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
