--- a/index.html
+++ b/index.html
@@ -75,14 +75,23 @@ https://www.tooplate.com/view/2115-marvel
     <!-- HOME -->
     <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
       <div class="container p-3 mb-2 bg-warning text-dark">
-        <div class="text-center">
-          <h3 class="text-center small-text">Welcome to my page!</h3>
-          <h1 class="text-center">I'm Amina Elathir</h1>
-          <p class="text-center">A Software Engineer Based in Edmonton, Alberta</p>
-          <p>
-            <a href="#about" class="col-auto example-block">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
-          </p> 
+
+        <div>
+
+          <div class="text-center">
+            <img src="images/software-developer-902509.png" class="rounded float-left">
+            <h3 class="small-text">Welcome to my page!</h3>
+            <h1>I'm Amina Elathir</h1>
+            <p>A Software Engineer Based in Edmonton, Alberta</p>
+            <p>
+              <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
+            </p> 
+          </div>
+
+         
+
         </div>
+
       </div>
     </section>
 
@@ -105,11 +114,12 @@ https://www.tooplate.com/view/2115-marvel
                                 </div>
                         </h1>
 
-                        <p>Building a successful product is a challenge. I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm highly energetic in full stack development with a strong passion for Backend and algorithms design and applications.</p>
+                        <p class="justify-content-centerp">Building a successful product is a challenge. I am enthusiastic about solving problems in creative ways to deliver the best customer experience. I'm highly energetic in full stack development with a strong passion for Backend and algorithms design and applications.</p>
                         
                         <div class="custom-btn-group mt-4">
                           <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download CV</a>
-                          <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Contact Me</a>
+                          <a href="#project" class="btn custom-btn custom-btn-bg custom-btn-link">Check My Projects</a>
+                          <a href="#contact" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i>Contact Me</a>
                         </div>
                     </div>
                 </div>
@@ -142,6 +152,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Safari Rush Hour</h4>
                             <p>A 7 x 7 grid game using C++.</p>
+                            <p>It is a variation on the popular <a href="https://www.thinkfun.com/products/safari-rush-hour/" target="_blank" class="text-left">Rush Hour game from Binary Arts</a>. The object is to move your car through a tangle of obstacles to reach the exit.</p>
                             <img src="images/project/safari-test0.gif" class="img-fluid" alt="project 1 image">
                             <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="https://github.com/Amna-A/Safari2" target="_blank">Source Code</a>
@@ -164,6 +175,7 @@ https://www.tooplate.com/view/2115-marvel
                           <div class="project-info">
                             <h4>Ataxx (Console Project)</h4>
                             <p>A 2 player console game using C++.</p>
+                            <p class="text-left">Ataxx is an abstract strategy board game that involves play by two parties. The object of the game is for the player to make pieces constitute a majority of the pieces on the board at the end of the game, by converting as many of their opponent's pieces as possible. Players may chose to add obtacles on the board.</p>
                             <img src="images/project/Ataxx (1).gif" class="img-fluid" alt="project 3 image">
                             <br><br>
                             <a class="btn custom-btn custom-btn-bg custom-btn-link" href="http://github.com/Amna-A/Ataxx-with-AlphaBeta" target="_blank">Source Code</a>
