--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="stylesheet" href="css/scrollup.css">
+
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
 
 
@@ -374,80 +377,28 @@ https://www.tooplate.com/view/2115-marvel
       </div>
     </section>
 
-    <!-- FOOTER -->
-
-     <p class="text-center">Follow Me</p>
-     <div class="container mb-5 d-flex justify-content-center">
-      <ul class="social-list">
-          <li>
-              <div class="maincard">
-                  <div class="thecard">
-                      <div class="thefront text-center py-4 linkedin">
-                          <div class="social-icon"><a href="https://www.linkedin.com/in/amina-eltahir" target="_blank" ><i class="fa fa-linkedin fa-2x"></i></a> </div>
-                      </div>
-                      <div class="theback py-3 px-3 text-center linkedin">
-                          <div class="social-text mt-1"> <small class="font-weight-bold">LinkedIn</small> </div>
-                      </div>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <div class="maincard">
-                  <div class="thecard">
-                      <div class="thefront text-center py-4 github">
-                          <div class="social-icon"><a href="https://github.com/Amna-A" target="_blank"><i class="fa fa-github fa-2x"></i></a></div>
-                      </div>
-                      <div class="theback py-3 px-3 text-center github">
-                          <div class="social-text mt-1"> <small class="font-weight-bold">GitHub</small> </div>
-                      </div>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <div class="maincard">
-                  <div class="thecard">
-                      <div class="thefront text-center py-4 stackoverflow">
-                          <div class="social-icon"><a href="https://stackoverflow.com/users/14117545/kamoon" target="_blank"><i class="fa fa-stack-overflow fa-2x"></i></a></div>
-                      </div>
-                      <div class="theback py-3 px-3 text-center stackoverflow">
-                          <div class="social-text"> <small class="font-weight-bold">Stack Overflow</small> </div>
-                      </div>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <div class="maincard">
-                  <div class="thecard">
-                      <div class="thefront text-center py-4 hackerrank">
-                          <div class="social-icon"><a href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1" target="_blank"><i class="fab fa-hackerrank fa-2x"></i></a></div>
-                      </div>
-                      <div class="theback py-3 px-3 text-center hackerrank">
-                          <div class="social-text mt-1"> <small class="font-weight-bold">Hacker Rank</small> </div>
-                      </div>
-                  </div>
-              </div>
-          </li>
-          <li>
-              <div class="maincard">
-                  <div class="thecard">
-                      <div class="thefront text-center py-4 pinterest">
-                          <div class="social-icon"> <i class="fa fa-pinterest fa-2x"></i> </div>
-                      </div>
-                      <div class="theback py-3 px-3 text-center pinterest">
-                          <div class="social-text mt-1"> <small class="font-weight-bold">Pinterest</small> </div>
-                      </div>
-                  </div>
-              </div>
-          </li>
-      </ul>
+  <p class="text-canter">follow me</p>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <div class="container">
+      <!-- *-*-*-*-*-*-*-*-*-*-*-*  ANIMATED ICONS  *-*-*-*-*-*-*-*-*-*-*-* -->
+      <div class="col-md-12">
+        <div class="social-network social-circle">
+          <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
+          <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
+          <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a>
+          <a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
+        </div>
+      </div>
   </div>
 
+  <!-- scroll up -->
   <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
   <div class="height">
       <h3 class="text-center scroll">Scroll down </h3>
   </div>
 
-  
+
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -457,6 +408,7 @@ https://www.tooplate.com/view/2115-marvel
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
     <script src="js/scrollup.js"></script>
+    <script src="js/socialmedia.js"></script>
 
   </body>
 </html>
