--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@ https://www.tooplate.com/view/2115-marvel
       </div>
     </section>
 
-  <p class="text-canter">follow me</p>
+  <p class="text-center">follow me</p>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <div class="container">
       <!-- *-*-*-*-*-*-*-*-*-*-*-*  ANIMATED ICONS  *-*-*-*-*-*-*-*-*-*-*-* -->
-      <div class="col-md-12">
+      <div class="col-md-12 justify-content-center">
         <div class="social-network social-circle">
           <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
           <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
