--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- my addition -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/socialmedia.css">
     <link rel="stylesheet" href="css/scrollup.css">
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -381,22 +381,22 @@ https://www.tooplate.com/view/2115-marvel
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <div class="container">
       <!-- *-*-*-*-*-*-*-*-*-*-*-*  ANIMATED ICONS  *-*-*-*-*-*-*-*-*-*-*-* -->
-      <div class="col-md-12 justify-content-center">
-        <div class="social-network social-circle">
-          <a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a>
-          <a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
-          <a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a>
-          <a href="#" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a>
-          <a href="#" class="icoRss" title="Rss"><i class="fa fa-rss"></i></a></li>
-        </div>
+      <div class="col-md-20">
+        <ul class="social-network social-circle sns">
+          <li><a target="_blank" href="https://github.com/Amna-A" class="icoGitHub" title="GitHub"><i class="fa fa-github"></i></a></li>
+          <li><a target="_blank" href="https://stackoverflow.com/users/14117545/kamoon" class="icoStackOverflow" title="stackoverflow"><i class="fa fa-stack-overflow"></i></a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/in/amina-eltahir/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+          <li><a target="_blank" href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1" class="icoHackerRank" title="HackerRank"><i class="fab fa-hackerrank"></i></a></li>
+          <li><a target="_blank" href="https://leetcode.com/user4041uz/" class="icoLeetcode" title="Leetcode"><i class="fa fa-leetcode"></i></a></li>
+        </ul>
       </div>
   </div>
 
+
+
   <!-- scroll up -->
   <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
-  <div class="height">
-      <h3 class="text-center scroll">Scroll down </h3>
-  </div>
+
 
 
     <script src="js/jquery-3.3.1.min.js"></script>
@@ -407,6 +407,7 @@ https://www.tooplate.com/view/2115-marvel
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/smoothscroll.js"></script>
     <script src="js/custom.js"></script>
+
     <script src="js/scrollup.js"></script>
     <script src="js/socialmedia.js"></script>
 
