--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ https://www.tooplate.com/view/2115-marvel
                 </ul>
             </div>
         </div>
+        
 
     </nav>
 
@@ -377,26 +378,24 @@ https://www.tooplate.com/view/2115-marvel
       </div>
     </section>
 
-  <p class="text-center">follow me</p>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <div class="container">
-      <!-- *-*-*-*-*-*-*-*-*-*-*-*  ANIMATED ICONS  *-*-*-*-*-*-*-*-*-*-*-* -->
-      <div class="col-md-20">
-        <ul class="social-network social-circle sns">
-          <li><a target="_blank" href="https://github.com/Amna-A" class="icoGitHub" title="GitHub"><i class="fa fa-github"></i></a></li>
-          <li><a target="_blank" href="https://stackoverflow.com/users/14117545/kamoon" class="icoStackOverflow" title="stackoverflow"><i class="fa fa-stack-overflow"></i></a></li>
-          <li><a target="_blank" href="https://www.linkedin.com/in/amina-eltahir/" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-          <li><a target="_blank" href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1" class="icoHackerRank" title="HackerRank"><i class="fab fa-hackerrank"></i></a></li>
-          <li><a target="_blank" href="https://leetcode.com/user4041uz/" class="icoLeetcode" title="Leetcode"><i class="fa fa-leetcode"></i></a></li>
-        </ul>
-      </div>
-  </div>
-
-
-
   <!-- scroll up -->
   <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <ul class="socialIcons">
+    <p class="text-center">follow me</p>
+    
+    <li class="github"><a target="_blank" href="https://github.com/Amna-A"><i class="fa fa-github"></i>GitHub</a></li>
+    <li class="stackoverflow"><a target="_blank" href="https://stackoverflow.com/users/14117545/kamoon"><i class="fa fa-fw fa-stack-overflow"></i>StackOverflow</a></li>
+    <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/in/amina-eltahir/"><i class="fa fa-fw fa-linkedin"></i>LinkedIn</a></li>
+    <li class="hackerrank"><a target="_blank" href="https://www.hackerrank.com/amna_a_ibrahim22?hr_r=1"><i class="fab fa-hackerrank"></i>HackerRank</a></li>
+    <li class="leetcode"><a target="_blank" href="https://leetcode.com/user4041uz/"><img align="center" src="images/leetcode.svg" alt="leetcode" height="30" width="40" />LeetCode</li></a>
+    <li class="codewars"><a target="_blank" href="https://www.codewars.com/users/yoona"><img align="center" src="images/codewars-black.svg" alt="codewars" height="30" width="40" />codewars</li></a>
+
+  </ul>
+  <br></br>
 
 
     <script src="js/jquery-3.3.1.min.js"></script>
