added home page

--- a/index.html
+++ b/index.html
@@ -73,6 +73,24 @@ https://www.tooplate.com/view/2115-marvel
         </div>
     </nav>
 
+    <!-- HOME -->
+    <section class="home full-screen d-lg-flex justify-content-center align-items-center" id="home">
+      <div class="container p-3 mb-2 bg-warning text-dark">
+        <div>
+          <div class="text-center">
+            <img src="images/software-developer-902509.png" class="rounded float-left">
+            <h3 class="small-text">Welcome to my page!</h3>
+            <h1>I'm Amina Elathir</h1>
+            <p>A Software Engineer Based in Edmonton, Alberta</p>
+            <p>
+              <a href="#about" class="col-auto example-block btn mr-lg-2 custom-btn">find out more about me!<img class="image" src="https://i.imgur.com/q3Q5A5e.gif" alt="Smiling Face With Heart-Eyes" title="Smiling Face With Heart-Eyes" width="34" height="34"></a>
+            </p> 
+          </div>
+        </div>
+      </div>
+    </section>
+
+    
     <!-- ABOUT -->
     <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
         <div class="container">
